// Copyright (c) 2024 - Restate Software, Inc., Restate GmbH
//
// This file is part of the Restate service protocol, which is
// released under the MIT license.
//
// You can find a copy of the license in file LICENSE in the root
// directory of this repository or package, or at
// https://github.com/restatedev/proto/blob/main/LICENSE

syntax = "proto3";

import "google/protobuf/empty.proto";

package dev.restate.worker;

service Worker {
  // Get the current known version of bifrost metadata on this node
  rpc GetBifrostVersion(google.protobuf.Empty) returns (BifrostVersion);

  // Terminate the specified invocation
  rpc TerminateInvocation(TerminationRequest) returns (google.protobuf.Empty);

  // Mutate the specified state
  rpc MutateState(StateMutationRequest) returns (google.protobuf.Empty);
}

message BifrostVersion {
  uint64 version = 1;
}

message TerminationRequest {
  // todo: Replace with proper protobuf
  bytes invocation_termination = 1;
}

message StateMutationRequest {
  // todo: Replace with proper protobuf
  bytes state_mutation = 1;
}